--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
