--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-syntax-highlighter": "^10.1.2",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
   },
