--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "dotenv": "^6.2.0",
@@ -16,6 +17,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2",
     "react-syntax-highlighter": "^10.1.2",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
@@ -25,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && surge ./build --domain https://drgnz-challenges.surge.sh"
+    "deploy": "react-scripts build && surge ./build --domain https://drgnz-challenge.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
