--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "node-sass": "^4.11.0",
@@ -19,7 +20,9 @@
     "react-slick": "^0.23.2",
     "react-syntax-highlighter": "^10.1.2",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0"
+    "redux-devtools-extension": "^2.13.7",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
