--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "2.1.1",
     "react-slick": "^0.23.2",
     "react-syntax-highlighter": "^10.1.2",
+    "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-persist": "^5.10.0",
