--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-recaptcha": "^1.0.5",
     "react-markdown": "^4.0.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
