--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-select": "^2.2.0",
     "react-slick": "^0.23.2",
     "react-syntax-highlighter": "^10.1.2",
     "react-toastify": "^4.5.1",
